RESOLVED FIXED159601
appendMemcpy might fail in concatAppendOne
https://bugs.webkit.org/show_bug.cgi?id=159601
Summary appendMemcpy might fail in concatAppendOne
Keith Miller
Reported 2016-07-09 11:45:56 PDT
appendMemcpy might fail in concatAppendOne
Attachments
Patch (3.82 KB, patch)
2016-07-09 12:13 PDT, Keith Miller
no flags
Patch for landing (6.55 KB, patch)
2016-07-09 13:13 PDT, Keith Miller
no flags
Patch for landing (6.55 KB, patch)
2016-07-09 13:20 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2016-07-09 12:13:01 PDT
Mark Lam
Comment 2 2016-07-09 12:59:12 PDT
Comment on attachment 283264 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=283264&action=review r=me if perf checks out. Also please rename the test to concat-with-holesMustForwardToPrototype.js since the issue is with arrays that have the holesMustForwardToPrototype attribute. > Source/JavaScriptCore/ChangeLog:10 > + a one of the Array prototypes has an index property. This patch typo: "a one" => "one".
Keith Miller
Comment 3 2016-07-09 13:13:36 PDT
Created attachment 283266 [details] Patch for landing
Keith Miller
Comment 4 2016-07-09 13:20:01 PDT
Keith Miller
Comment 5 2016-07-09 13:20:53 PDT
Created attachment 283267 [details] Patch for landing
WebKit Commit Bot
Comment 6 2016-07-09 13:51:32 PDT
Comment on attachment 283267 [details] Patch for landing Clearing flags on attachment: 283267 Committed r203033: <http://trac.webkit.org/changeset/203033>
WebKit Commit Bot
Comment 7 2016-07-09 13:51:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.