appendMemcpy might fail in concatAppendOne https://bugs.webkit.org/show_bug.cgi?id=159601 Source/JavaScriptCore:

<rdar://problem/27211300>

Reviewed by Mark Lam.

There are multiple reasons why we might fail appendMemcpy. One
reason, which I suspect was the source of the crashes, is that one
of the Array prototypes has an indexed property. This patch
consolidates the two old cases by just creating an array then
attempting to memcpy append. If that fails, we fall back to
moveElements.

* runtime/ArrayPrototype.cpp:
(JSC::concatAppendOne):
* tests/stress/concat-with-holesMustForwardToPrototype.js: Added.
(arrayEq):

LayoutTests:

Reviewed by Mark Lam.

Add new microbenchmark testing the performance of concat
when appending one new element. This patch appears to be
about a 13% progression on this test.

* js/regress/concat-append-one-expected.txt: Added.
* js/regress/concat-append-one.html: Added.
* js/regress/script-tests/concat-append-one.js: Added.
(test):


Canonical link: https://commits.webkit.org/177743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203033 268f45cc-cd09-0410-ab3c-d52691b4dbfc